<resources>
    <string name="app_name">Team Creator</string>
    <string name="title_players_register">Cadastro de Jogadores</string>
    <string name="hint_edit_player_name">Nome do jogador</string>
    <string name="hint_edit_main_position">Posição principal</string>
    <string name="hint_edit_second_position">Posição secundária</string>
    <string name="label_button_add">Adicionar</string>
    <string name="title_players_list">Jogadores</string>
    <string name="title_game_configuration">Informações do jogo</string>
    <string name="label_button_next">Avançar</string>
    <string name="label_players_per_team">Jogadores por time</string>
    <string name="label_teams_number">Número de times</string>
    <string name="label_button_create_team">Gerar times</string>
    <string name="title_teams_list">Times</string>
    <string name="label_team_number">Time:</string>
</resources>