<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:fontFamily="monospace"
        android:text="@string/title_players_register"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_name"
        style="@style/edit_text_rounded"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="48dp"
        android:hint="@string/hint_edit_player_name"
        android:paddingHorizontal="8dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/edit_main_position"
        style="@style/edit_text_rounded"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="32dp"
        android:focusable="false"
        android:hint="@string/hint_edit_main_position"
        android:paddingHorizontal="8dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_name" />

    <EditText
        android:id="@+id/edit_second_position"
        style="@style/edit_text_rounded"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="32dp"
        android:focusable="false"
        android:hint="@string/hint_edit_second_position"
        android:paddingHorizontal="8dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_main_position" />

    <LinearLayout
        android:id="@+id/layout_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/edit_second_position">

        <ImageView
            android:id="@+id/star_1"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:src="@drawable/star_empty" />

        <ImageView
            android:id="@+id/star_2"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:src="@drawable/star_empty" />

        <ImageView
            android:id="@+id/star_3"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:src="@drawable/star_empty" />
    </LinearLayout>

    <Button
        android:id="@+id/button_next_step"
        style="@style/rounded_button_dark_grey"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="56dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:text="@string/label_button_add"
        android:scaleType="fitCenter"
        android:drawableEnd="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_stars"
        app:layout_constraintVertical_bias="0.85" />
</androidx.constraintlayout.widget.ConstraintLayout>