<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@string/title_game_configuration"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_player_per_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_players_per_team"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.github.lipenathan.teamcreator.views.components.custom.NumberIncrementer
        android:id="@+id/players_per_team_incrementer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_player_per_team" />

    <TextView
        android:id="@+id/label_teams_number"
        app:layout_constraintTop_toBottomOf="@id/label_player_per_team"
        app:layout_constraintStart_toStartOf="@id/label_player_per_team"
        android:layout_marginTop="32dp"
        android:text="@string/label_teams_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.github.lipenathan.teamcreator.views.components.custom.NumberIncrementer
        android:id="@+id/teams_number_incrementer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_teams_number" />

    <Button
        android:id="@+id/button_create_teams"
        style="@style/rounded_button_dark_grey"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:text="Montar time"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="32dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_generate_teams"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/button_generate_teams"
        style="@style/rounded_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:text="@string/label_button_create_team"
        app:layout_constraintStart_toEndOf="@id/button_create_teams"
        android:layout_marginBottom="32dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.85" />
</androidx.constraintlayout.widget.ConstraintLayout>